# tca6424-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md
.github/workflows/: build.yml  release.yml
.roo/: mcp.json  system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
context_portal/: context.db
docs/: tca6424.md
examples/stm32g4/: Cargo.toml  README.md
examples/stm32g4/src/: main.rs
src/: data_types.rs  errors.rs  lib.rs  registers.rs
tests/: integration_test.rs
