[package]
name = "tca6424"
version = "0.0.0"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A TCA6424 driver based on embedded-hal. Support `async` and `sync` features."
keywords = [
  "io-expander",
  "embedded-hal-driver",
  "no-std",
  "tca6424",
  "async",
]
repository = "https://github.com/IvanLi-CN/tca6424-rs"

[dependencies]
embedded-hal = { version = "1.0.0", default-features = false }
embedded-hal-async = { version = "1.0.0", optional = true, default-features = false }
maybe-async-cfg = "0.2.5"
heapless = "0.8"
defmt = { version = "1.0.1", optional = true }
binrw = { version = "0.15.0", default-features = false, optional = true }
bitflags = "2.9"

[features]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
binrw = ["dep:binrw"]
std = ["binrw?/std"]

[dev-dependencies]
embedded-hal-mock = "0.11"

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
